tests/FSharp.Analyzers.Tests/data/partialapp/negative/No warning for right piped args to fold.fs
module M

[1;2;3] |> List.fold (fun a b -> a + b) 100
